--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -294,7 +294,7 @@ endif(${MPI_FOUND})
 #-------------------------------------------------------------------------------
 # hyphy debug target
 #-------------------------------------------------------------------------------
-add_definitions(-D__AFYP_REWRITE_BGM__)
+
 add_executable(
     HYPHYDEBUG
     EXCLUDE_FROM_ALL
@@ -341,7 +341,7 @@ set_target_properties(
 
 find_package(GTK2 2.6)
 
-if(${GTK2_FOUND})
+if(${GTK2_FOUND} AND NOT APPLE)
       include_directories(${GTK2_INCLUDE_DIRS})
 
 	  file(GLOB SRC_GUI_GTK src/gui/gtk/*.cpp src/gui/gtk/Components/*.cpp src/gui/gtk/WindowClasses/*.cpp)
@@ -378,8 +378,8 @@ if(${GTK2_FOUND})
         LINK_FLAGS "${DEFAULT_LINK_FLAGS} ${GTK2_LINK_FLAGS}"
     )
     
-endif(${GTK2_FOUND})
-   
+endif(${GTK2_FOUND} AND NOT APPLE)
+
 
 
  
